--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "datastructures",
   "version": "1.0.0",
-  "type": "module",
+  "type": "commonjs",
   "description": "",
-  "main": "timeConvertion.js",
+  "main": "fstAndLastOccr.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
